// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useCarryOn debounce 1`] = `
<DocumentFragment>
  ok
</DocumentFragment>
`;

exports[`useCarryOn renders 1`] = `
<DocumentFragment>
  value1
</DocumentFragment>
`;

exports[`useCarryOn renders 2`] = `
<DocumentFragment>
  value2
</DocumentFragment>
`;

exports[`useCarryOn throttle 1`] = `
<DocumentFragment>
  value1
</DocumentFragment>
`;
